updated tabulation, mvp

--- a/VNM_HH_extract.ipynb
+++ b/VNM_HH_extract.ipynb
@@ -24,7 +24,7 @@
     "import pyreadstat\n",
     "\n",
     "from std_utils import (\n",
-    "    read_file,\n",
+    "    read_spss_file,\n",
     "    run_quality_assurance,\n",
     "    generate_HHID,\n",
     "    merge_hh_hl_data,\n",
@@ -83,7 +83,7 @@
     "for year in year_list:\n",
     "\n",
     "    # Read file\n",
-    "    df = read_file(country, year, recode)\n",
+    "    df = read_spss_file(country, year, recode)\n",
     "\n",
     "    # Create HHID to facilitate merge of HH and HL data\n",
     "    generate_HHID(df, country, year, recode)\n",
