--- a/VNM_HL_extract.ipynb
+++ b/VNM_HL_extract.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "import pyreadstat\n",
     "\n",
     "from std_utils import (\n",
-    "    read_file,\n",
+    "    read_spss_file,\n",
     "    run_quality_assurance,\n",
     "    generate_HHID,\n",
     "    merge_hh_hl_data,\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
     "for year in year_list:\n",
     "\n",
     "    # Read file\n",
-    "    df = read_file(country, year, recode)\n",
+    "    df = read_spss_file(country, year, recode)\n",
     "\n",
     "    # Create HHID to facilitate merge of HH and HL data\n",
     "    generate_HHID(df, country, year, recode)\n",
@@ -109,6 +109,13 @@
     "    # Save to merge folder\n",
     "    save_merge(df, country, year, recode)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
