--- a/VNM_WM_preprocess.ipynb
+++ b/VNM_WM_preprocess.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,9 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- wm_2021.sav -- has the following shape: Rows: 11294; Columns: 458\n",
+      "HHID is NOT unique\n",
+      "Drop columns if all values are NaN...\n",
+      "Updated -- Rows: 11294; Columns: 450\n",
+      "Checking if any rows are duplicates...\n",
+      "The are no duplicate rows\n",
+      "The number of mothers with a birth in the past two years is: 1566\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
@@ -119,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,9 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'AVERAGE': 0.015719207579672698, 'LARGER THAN AVERAGE': 0.0, 'SMALLER THAN AVERAGE': 0.23166666666666666, 'NO RESPONSE': 0.0, 'VERY LARGE': 0.03333333333333333, 'VERY SMALL': 0.5344827586206896, 'DK': 0.0}\n"
+     ]
+    }
+   ],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -164,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,9 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- wm_2014.sav -- has the following shape: Rows: 10190; Columns: 258\n",
+      "HHID is NOT unique\n",
+      "Drop columns if all values are NaN...\n",
+      "Updated -- Rows: 10190; Columns: 260\n",
+      "Checking if any rows are duplicates...\n",
+      "The are no duplicate rows\n",
+      "The number of mothers with a birth in the past two years is: 1484\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
@@ -217,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,9 +264,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'Larger than average': 0.0, 'Average': 0.01837270341207349, 'Very small': 0.631578947368421, 'Smaller than average': 0.3537037037037037, 'Missing': 0.0, 'Very large': 0.0, 'DK': 0.0}\n"
+     ]
+    }
+   ],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -262,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,9 +339,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- wm_2011.sav -- has the following shape: Rows: 12115; Columns: 235\n",
+      "HHID is NOT unique\n",
+      "Drop columns if all values are NaN...\n",
+      "Updated -- Rows: 12115; Columns: 238\n",
+      "Checking if any rows are duplicates...\n",
+      "The are no duplicate rows\n",
+      "The number of mothers with a birth in the past two years is: 1363\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
@@ -322,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,9 +392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'Average': 0.017458100558659217, 'Smaller than average': 0.3431818181818182, 'Missing': 0.25, 'Larger than average': 0.0, 'Very small': 0.55, 'Very large': 0.0, 'DK': 0.0}\n"
+     ]
+    }
+   ],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -367,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,9 +467,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- wm_2006.sav -- has the following shape: Rows: 9471; Columns: 252\n",
+      "HHID is NOT unique\n",
+      "Drop columns if all values are NaN...\n",
+      "Updated -- Rows: 9471; Columns: 255\n",
+      "Checking if any rows are duplicates...\n",
+      "The are no duplicate rows\n",
+      "The number of mothers with a birth in the past two years is: 1023\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
@@ -427,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,9 +520,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'Smaller than average': 0.23949579831932774, 'Average': 0.0232722143864598, 'Larger than average': 0.0031847133757961785, 'Very large': 0.08333333333333333, 'Very small': 0.5, nan: nan, 'DK': 0.03125}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\women_analysis.py:343: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  agg_value_prop_dict[agg_value] = (((df.loc[df[agg_value_col] == agg_value][group_col_1].sum()) + \\\n"
+     ]
+    }
+   ],
    "source": [
     "# # --- ANC 4+ visits [anc_4_visits] --- #\n",
     "# df = create_anc_4_visits(df, country, year)\n",
@@ -472,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,9 +603,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- wm_2000.sav -- has the following shape: Rows: 9252; Columns: 182\n",
+      "HHID is NOT unique\n",
+      "Drop columns if all values are NaN...\n",
+      "Updated -- Rows: 9252; Columns: 186\n",
+      "Checking if any rows are duplicates...\n",
+      "The are no duplicate rows\n",
+      "The number of mothers with a birth in the past two years is: 550\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
@@ -532,9 +646,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusted mother education value are: \n",
+      " Lower secondary               202\n",
+      "primaire                      151\n",
+      "NaN                           102\n",
+      "Upper secondary                71\n",
+      "College univerty or higher     15\n",
+      "Tech voc. training              6\n",
+      "Non standard                    3\n",
+      "Name: MELEVEL, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# --- Create Mother edu [mother_edu] --- #\n",
     "df = create_mother_edu(df, country, year)"
@@ -542,9 +672,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'Average': 0.009285714285714286, 'Very large': 0.0, 'Larger than average': 0.00980392156862745, 'Smaller than average': 0.203125, 'Very small': 0.2222222222222222, \"Don't know\": 0.0, nan: nan}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\women_analysis.py:343: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  agg_value_prop_dict[agg_value] = (((df.loc[df[agg_value_col] == agg_value][group_col_1].sum()) + \\\n"
+     ]
+    }
+   ],
    "source": [
     "# # --- ANC 4+ visits [anc_4_visits] --- #\n",
     "# df = create_anc_4_visits(df, country, year)\n",
@@ -577,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
