--- a/VNM_WM_tabulate.ipynb
+++ b/VNM_WM_tabulate.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- VNM_women_2000_working.csv -- has the following shape: Rows: 550; Columns: 13\n",
+      "The file -- VNM_women_2006_working.csv -- has the following shape: Rows: 1023; Columns: 16\n",
+      "The file -- VNM_women_2011_working.csv -- has the following shape: Rows: 1363; Columns: 18\n",
+      "The file -- VNM_women_2014_working.csv -- has the following shape: Rows: 1484; Columns: 22\n",
+      "The file -- VNM_women_2021_working.csv -- has the following shape: Rows: 1566; Columns: 22\n"
+     ]
+    }
+   ],
    "source": [
     "# Set parameters\n",
     "country = 'VNM'\n",
@@ -68,7 +80,7 @@
     "list_of_dfs = [read_csv_file(country, year, recode) for year in year_list]\n",
     "\n",
     "# Combine the dfs\n",
-    "df = concatenate_dfs(country, list_of_dfs, recode)\n",
+    "df = concatenate_dfs(list_of_dfs)\n",
     "\n",
     "# Save and export\n",
     "save_combined(df, country, recode)"
@@ -83,9 +95,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- VNM_women_2000_working.csv -- has the following shape: Rows: 550; Columns: 13\n",
+      "Warning: Unable to create sheet for var anc_4_visits\n",
+      "Warning: Unable to create sheet for var anc_3_components\n",
+      "Warning: Unable to create sheet for var inst_delivery\n",
+      "Warning: Unable to create sheet for var caesarean_del\n",
+      "Warning: Unable to create sheet for var pnc_mother\n",
+      "Warning: Unable to create sheet for var early_bf\n",
+      "The file -- VNM_women_2006_working.csv -- has the following shape: Rows: 1023; Columns: 16\n",
+      "Warning: Unable to create sheet for var anc_4_visits\n",
+      "Warning: Unable to create sheet for var caesarean_del\n",
+      "Warning: Unable to create sheet for var pnc_mother\n",
+      "The file -- VNM_women_2011_working.csv -- has the following shape: Rows: 1363; Columns: 18\n",
+      "Warning: Unable to create sheet for var pnc_mother\n",
+      "The file -- VNM_women_2014_working.csv -- has the following shape: Rows: 1484; Columns: 22\n",
+      "The file -- VNM_women_2021_working.csv -- has the following shape: Rows: 1566; Columns: 22\n"
+     ]
+    }
+   ],
    "source": [
     "## TOTAL DATASET\n",
     "\n",
@@ -100,7 +134,7 @@
     "\n",
     "for year in year_list:\n",
     "\n",
-    "    fn = country + \"_\" + recode + \"_\" + year + '_working' + '.csv'\n",
+    "    # fn = country + \"_\" + recode + \"_\" + year + '_working' + '.csv'\n",
     "\n",
     "    df = read_csv_file(country, year, recode)\n",
     "\n",
@@ -132,12 +166,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- VNM_women_combined.csv -- has the following shape: Rows: 5986; Columns: 22\n"
+     ]
+    }
+   ],
    "source": [
     "# Read in combined file\n",
-    "df = pd.read_csv('./combined/VNM_women_combined_2022-07-12.csv')\n",
+    "df = read_csv_file(country, year, recode, file_type='combined')\n",
     "\n",
     "# Create updated bivariate variables (mother_edu_biv, eth_hoh_biv)\n",
     "df = create_bivariate_var_dep(df)"
@@ -145,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
