added mother edu merge functionality

--- a/VNM_HL_extract.ipynb
+++ b/VNM_HL_extract.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,9 @@
     "    read_spss_file,\n",
     "    run_quality_assurance,\n",
     "    generate_HHID,\n",
+    "    generate_MEMID,\n",
+    "    subset_edu_save,\n",
+    "    add_total_year,\n",
     "    merge_hh_hl_data,\n",
     "    subset_hl_df,\n",
     "    standardize_col_names,\n",
@@ -42,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,32 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file -- hl_2000.sav -- has the following shape: Rows: 35657; Columns: 99\n",
-      "HHID is NOT unique\n",
-      "The merge variable *HHID* is unique: True\n",
-      "The file -- hl_2006.sav -- has the following shape: Rows: 36573; Columns: 154\n",
-      "HHID is NOT unique\n",
-      "The merge variable *HHID* is unique: True\n",
-      "The file -- hl_2011.sav -- has the following shape: Rows: 44831; Columns: 64\n",
-      "HHID is NOT unique\n",
-      "The merge variable *HHID* is unique: True\n",
-      "The file -- hl_2014.sav -- has the following shape: Rows: 39380; Columns: 50\n",
-      "HHID is NOT unique\n",
-      "The merge variable *HHID* is unique: True\n",
-      "The file -- hl_2021.sav -- has the following shape: Rows: 47821; Columns: 73\n",
-      "HHID is NOT unique\n",
-      "The merge variable *HHID* is unique: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Extract data for HL\n",
+    "\n",
     "for year in year_list:\n",
     "\n",
     "    # Read file\n",
@@ -115,7 +98,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Generate MEMID for extract mother edu data\n",
+    "\n",
+    "for year in year_list:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- hl_2021.sav -- has the following shape: Rows: 47821; Columns: 73\n",
+      "HHID is NOT unique\n",
+      "MEMID is unique\n"
+     ]
+    }
+   ],
+   "source": [
+    "country = 'VNM'\n",
+    "recode = 'listing'\n",
+    "\n",
+    "year = '2021'\n",
+    "\n",
+    "\n",
+    "# Read file\n",
+    "df = read_spss_file(country, year, recode)\n",
+    "\n",
+    "# Create HHID to facilitate merge of HH and HL data\n",
+    "generate_HHID(df, country, year, recode)\n",
+    "\n",
+    "# Create MEMID\n",
+    "generate_MEMID(df, country, year, recode)\n",
+    "\n",
+    "subset_edu_save(df, country, year, recode)"
+   ]
   },
   {
    "cell_type": "code",
