--- a/VNM_WM_preprocess.ipynb
+++ b/VNM_WM_preprocess.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,7 @@
     "    read_spss_file,\n",
     "    run_quality_assurance,\n",
     "    generate_HHID,\n",
+    "    add_total_year,\n",
     "    merge_hh_hl_data,\n",
     "    subset_hl_df,\n",
     "    standardize_col_names,\n",
@@ -44,12 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load women_imports.py\n",
     "from women_analysis import (\n",
+    "    generate_WMID,\n",
     "    generate_str_replace_dict,\n",
     "    create_anc_4_visits,\n",
     "    create_anc_3_components,\n",
@@ -58,7 +60,6 @@
     "    create_pnc_mother,\n",
     "    create_low_bw,\n",
     "    create_early_bf,\n",
-    "    create_low_bw,\n",
     "    create_mother_edu,\n",
     "    subset_women_file\n",
     ")\n",
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -99,8 +100,9 @@
      "text": [
       "The file -- wm_2021.sav -- has the following shape: Rows: 11294; Columns: 458\n",
       "HHID is NOT unique\n",
+      "WMID is unique\n",
       "Drop columns if all values are NaN...\n",
-      "Updated -- Rows: 11294; Columns: 450\n",
+      "Updated -- Rows: 11294; Columns: 451\n",
       "Checking if any rows are duplicates...\n",
       "The are no duplicate rows\n",
       "The number of mothers with a birth in the past two years is: 1566\n"
@@ -114,6 +116,12 @@
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
     "\n",
+    "# Create WMID to facilitate merge into U5 file\n",
+    "generate_WMID(df, country, year)\n",
+    "\n",
+    "# Add Total, Year\n",
+    "add_total_year(df, year)\n",
+    "\n",
     "# Run quality assurance\n",
     "run_quality_assurance(df)\n",
     "\n",
@@ -125,6 +133,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1543"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.HHID.nunique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,18 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "agg_value_prop_dict is: \n",
-      " {'AVERAGE': 0.015719207579672698, 'LARGER THAN AVERAGE': 0.0, 'SMALLER THAN AVERAGE': 0.23166666666666666, 'NO RESPONSE': 0.0, 'VERY LARGE': 0.03333333333333333, 'VERY SMALL': 0.5344827586206896, 'DK': 0.0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -187,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,29 +237,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file -- wm_2014.sav -- has the following shape: Rows: 10190; Columns: 258\n",
-      "HHID is NOT unique\n",
-      "Drop columns if all values are NaN...\n",
-      "Updated -- Rows: 10190; Columns: 260\n",
-      "Checking if any rows are duplicates...\n",
-      "The are no duplicate rows\n",
-      "The number of mothers with a birth in the past two years is: 1484\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
+    "\n",
+    "# Create WMID to facilitate merge into U5 file\n",
+    "generate_WMID(df, country, year)\n",
+    "\n",
+    "# Add Total, Year\n",
+    "add_total_year(df, year)\n",
     "\n",
     "# Run quality assurance\n",
     "run_quality_assurance(df)\n",
@@ -254,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,18 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "agg_value_prop_dict is: \n",
-      " {'Larger than average': 0.0, 'Average': 0.01837270341207349, 'Very small': 0.631578947368421, 'Smaller than average': 0.3537037037037037, 'Missing': 0.0, 'Very large': 0.0, 'DK': 0.0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,29 +341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file -- wm_2011.sav -- has the following shape: Rows: 12115; Columns: 235\n",
-      "HHID is NOT unique\n",
-      "Drop columns if all values are NaN...\n",
-      "Updated -- Rows: 12115; Columns: 238\n",
-      "Checking if any rows are duplicates...\n",
-      "The are no duplicate rows\n",
-      "The number of mothers with a birth in the past two years is: 1363\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
+    "\n",
+    "# Create WMID to facilitate merge into U5 file\n",
+    "generate_WMID(df, country, year)\n",
+    "\n",
+    "# Add Total, Year\n",
+    "add_total_year(df, year)\n",
     "\n",
     "# Run quality assurance\n",
     "run_quality_assurance(df)\n",
@@ -382,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,18 +386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "agg_value_prop_dict is: \n",
-      " {'Average': 0.017458100558659217, 'Smaller than average': 0.3431818181818182, 'Missing': 0.25, 'Larger than average': 0.0, 'Very small': 0.55, 'Very large': 0.0, 'DK': 0.0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -436,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,29 +452,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file -- wm_2006.sav -- has the following shape: Rows: 9471; Columns: 252\n",
-      "HHID is NOT unique\n",
-      "Drop columns if all values are NaN...\n",
-      "Updated -- Rows: 9471; Columns: 255\n",
-      "Checking if any rows are duplicates...\n",
-      "The are no duplicate rows\n",
-      "The number of mothers with a birth in the past two years is: 1023\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
+    "\n",
+    "# Create WMID to facilitate merge into U5 file\n",
+    "generate_WMID(df, country, year)\n",
+    "\n",
+    "# Add Total, Year\n",
+    "add_total_year(df, year)\n",
     "\n",
     "# Run quality assurance\n",
     "run_quality_assurance(df)\n",
@@ -510,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,26 +497,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "agg_value_prop_dict is: \n",
-      " {'Smaller than average': 0.23949579831932774, 'Average': 0.0232722143864598, 'Larger than average': 0.0031847133757961785, 'Very large': 0.08333333333333333, 'Very small': 0.5, nan: nan, 'DK': 0.03125}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\women_analysis.py:343: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  agg_value_prop_dict[agg_value] = (((df.loc[df[agg_value_col] == agg_value][group_col_1].sum()) + \\\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # --- ANC 4+ visits [anc_4_visits] --- #\n",
     "# df = create_anc_4_visits(df, country, year)\n",
@@ -572,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -612,8 +572,9 @@
      "text": [
       "The file -- wm_2000.sav -- has the following shape: Rows: 9252; Columns: 182\n",
       "HHID is NOT unique\n",
+      "WMID is unique\n",
       "Drop columns if all values are NaN...\n",
-      "Updated -- Rows: 9252; Columns: 186\n",
+      "Updated -- Rows: 9252; Columns: 187\n",
       "Checking if any rows are duplicates...\n",
       "The are no duplicate rows\n",
       "The number of mothers with a birth in the past two years is: 550\n"
@@ -626,6 +587,12 @@
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
+    "\n",
+    "# Create WMID to facilitate merge into U5 file\n",
+    "generate_WMID(df, country, year)\n",
+    "\n",
+    "# Add Total, Year\n",
+    "add_total_year(df, year)\n",
     "\n",
     "# Run quality assurance\n",
     "run_quality_assurance(df)\n",
@@ -646,25 +613,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusted mother education value are: \n",
-      " Lower secondary               202\n",
-      "primaire                      151\n",
-      "NaN                           102\n",
-      "Upper secondary                71\n",
-      "College univerty or higher     15\n",
-      "Tech voc. training              6\n",
-      "Non standard                    3\n",
-      "Name: MELEVEL, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- Create Mother edu [mother_edu] --- #\n",
     "df = create_mother_edu(df, country, year)"
@@ -672,26 +623,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "agg_value_prop_dict is: \n",
-      " {'Average': 0.009285714285714286, 'Very large': 0.0, 'Larger than average': 0.00980392156862745, 'Smaller than average': 0.203125, 'Very small': 0.2222222222222222, \"Don't know\": 0.0, nan: nan}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\women_analysis.py:343: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  agg_value_prop_dict[agg_value] = (((df.loc[df[agg_value_col] == agg_value][group_col_1].sum()) + \\\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # --- ANC 4+ visits [anc_4_visits] --- #\n",
     "# df = create_anc_4_visits(df, country, year)\n",
@@ -724,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
