--- a/VNM_WM_tabulate.ipynb
+++ b/VNM_WM_tabulate.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,21 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file -- VNM_women_2000_working.csv -- has the following shape: Rows: 550; Columns: 13\n",
-      "The file -- VNM_women_2006_working.csv -- has the following shape: Rows: 1023; Columns: 16\n",
-      "The file -- VNM_women_2011_working.csv -- has the following shape: Rows: 1363; Columns: 18\n",
-      "The file -- VNM_women_2014_working.csv -- has the following shape: Rows: 1484; Columns: 22\n",
-      "The file -- VNM_women_2021_working.csv -- has the following shape: Rows: 1566; Columns: 22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set parameters\n",
     "country = 'VNM'\n",
@@ -77,7 +65,7 @@
     "\n",
     "\n",
     "# Read in files, store dfs in list\n",
-    "list_of_dfs = [read_csv_file(country, year, recode) for year in year_list]\n",
+    "list_of_dfs = [read_csv_file(country, recode, year, file_type='working') for year in year_list]\n",
     "\n",
     "# Combine the dfs\n",
     "df = concatenate_dfs(list_of_dfs)\n",
@@ -95,31 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file -- VNM_women_2000_working.csv -- has the following shape: Rows: 550; Columns: 13\n",
-      "Warning: Unable to create sheet for var anc_4_visits\n",
-      "Warning: Unable to create sheet for var anc_3_components\n",
-      "Warning: Unable to create sheet for var inst_delivery\n",
-      "Warning: Unable to create sheet for var caesarean_del\n",
-      "Warning: Unable to create sheet for var pnc_mother\n",
-      "Warning: Unable to create sheet for var early_bf\n",
-      "The file -- VNM_women_2006_working.csv -- has the following shape: Rows: 1023; Columns: 16\n",
-      "Warning: Unable to create sheet for var anc_4_visits\n",
-      "Warning: Unable to create sheet for var caesarean_del\n",
-      "Warning: Unable to create sheet for var pnc_mother\n",
-      "The file -- VNM_women_2011_working.csv -- has the following shape: Rows: 1363; Columns: 18\n",
-      "Warning: Unable to create sheet for var pnc_mother\n",
-      "The file -- VNM_women_2014_working.csv -- has the following shape: Rows: 1484; Columns: 22\n",
-      "The file -- VNM_women_2021_working.csv -- has the following shape: Rows: 1566; Columns: 22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## TOTAL DATASET\n",
     "\n",
@@ -134,11 +100,9 @@
     "\n",
     "for year in year_list:\n",
     "\n",
-    "    # fn = country + \"_\" + recode + \"_\" + year + '_working' + '.csv'\n",
+    "    df = read_csv_file(country, recode, year, file_type='working')\n",
     "\n",
-    "    df = read_csv_file(country, year, recode)\n",
-    "\n",
-    "    out_fn = country + \"_\" + recode + \"_\" + year + '_' + pd.Timestamp(\"today\").strftime(\"%Y-%m-%d\") + \".xlsx\"\n",
+    "    out_fn = country + \"_\" + recode + \"_\" + year + \".xlsx\"\n",
     "    path = Path.cwd() / 'output' / 'frequencies' / out_fn\n",
     "    \n",
     "    # Instantiate object\n",
@@ -166,20 +130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file -- VNM_women_combined.csv -- has the following shape: Rows: 5986; Columns: 22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read in combined file\n",
-    "df = read_csv_file(country, year, recode, file_type='combined')\n",
+    "df = read_csv_file(country, recode, file_type='combined')\n",
     "\n",
     "# Create updated bivariate variables (mother_edu_biv, eth_hoh_biv)\n",
     "df = create_bivariate_var_dep(df)"
@@ -187,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
